--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,9 @@
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -24,7 +25,22 @@
             </intent-filter>
         </activity>
         <activity android:name=".SmsActivity" />
-        <activity android:name=".AjouterContactActivity"></activity>
+        <activity android:name=".AjouterContactActivity" />
+        <activity android:name=".ImporterContact" />
+        <activity android:name=".ContactEdit"></activity>
+
+        <service
+            android:name="NotificationService"
+            android:exported="false">
+        </service>
+
+        <receiver android:name="BootReceiver">
+            <intent-filter>
+                <action android:name="com.example.quentin.projetnotificationservice" />
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
